added some sprites to test motion tracking
My plan is to make a tower defense game so I need to make sure I can
follow a character with a projectile

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h1>Comments</h1>
 		Disqus code goes here..
 
+		<scrit tweenjs.min.js></scrit>
 		<script src="pixi.js"></script>
 		<script src="game.js"></script>
 	</body>
