--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1>Comments</h1>
 		Disqus code goes here..
 
-		<scrit tweenjs.min.js></scrit>
+		<script src="tweenjs.min.js"></script>
 		<script src="pixi.js"></script>
 		<script src="game.js"></script>
 	</body>
