Added code to put the tile map on the screen with the racecar

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 		<script src="tweenjs.min.js"></script>
 		<script src="pixi.js"></script>
 		<script src="game.js"></script>
+		<script src="tileUtilities.js"></script>
 	</body>
 </html>
