--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>Hello World!</title>
+		<title>IndyCar Racing</title>
 	</head>
 	<body>
-		<h1>Game</h1>
+		<h1>IndyCar Racing</h1>
 		<div id="gameport"></div>
 
 		<h1>Instructions</h1>
