--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 		<script src="tweenjs.min.js"></script>
 		<script src="pixi.js"></script>
+		<script src="pixi-audio.js"></script>
 		<script src="game.js"></script>
 		<script src="tileUtilities.js"></script>
 	</body>
