--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 		<div id="gameport"></div>
 
 		<h1>Instructions</h1>
-		<p>How to play my game..</p>
+		<p>Use the 'A' and 'D' keys to steer the car.<br>
+		Click on the gas pedal in the lower left corner to accelerate</p>
 
 		<h1>Comments</h1>
-		Disqus code goes here..
+		
+		<div id="disqus_thread"></div>
+		<script>
+		(function() {
+			var d = document, s = d.createElement('script');
+			s.src = 'http://nau-cs413.disqus.com/embed.js';
+			s.setAttribute('data-timestamp', +new Date());
+			(d.head || d.body).appendChild(s);
+			})(); 
+		</script>
 
 		<script src="tweenjs.min.js"></script>
 		<script src="pixi.js"></script>
